Fix text alignment in head1 class

--- a/style.css
+++ b/style.css
@@ -6,4 +6,5 @@
 }
   .head1{
     font-family: Quincy;
-    text-align:center;}
+    text-align:center;
+  }
